AC_INIT(src/gphoto2.xml)

AM_INIT_AUTOMAKE(gphoto2-manual, 2.1.1dev4)

AM_MAINTAINER_MODE()

AC_PROG_LN_S()

GP_BUILD_DOCS()

AC_OUTPUT([
Makefile
m4/Makefile
src/Makefile
src/gphoto2-manual.pc
src/css/Makefile
src/html/Makefile
src/html-nochunks/Makefile
src/xhtml/Makefile
src/xhtml-nochunks/Makefile
src/pdf/Makefile
src/ps/Makefile
src/man/Makefile
src/txt/Makefile
src/figures/Makefile
src/screenshots/Makefile
src/screenshots/gtkam/Makefile
])
