# Keep figures at the beginning of this list, as the generated
# images may be required when building other subdirectories
SUBDIRS = figures screenshots css man html pdf txt xhtml html-nochunks xhtml-nochunks ps xsl

EXTRA_DIST = gphoto2.xml libgphoto2-faq.xml libgphoto2-FAQ gphoto2-manual.pc.in

xml_DATA = gphoto2.xml libgphoto2-faq.xml libgphoto2-FAQ

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gphoto2-manual.pc
