# Keep figures at the beginning of this list, as the generated
# images may be required when building other subdirectories
SUBDIRS = figures screenshots css man html txt xhtml html-nochunks xhtml-nochunks ps xsl pdf

EXTRA_DIST = gphoto2.xml libgphoto2-usage-faq.xml install-faq.xml gphoto2-manual.pc.in

xml_DATA = gphoto2.xml libgphoto2-usage-faq.xml install-faq.xml

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gphoto2-manual.pc
