EXTRA_DIST = cam.png cam_conf_cam.png cam_conf_driver.png cam_driver.png cam_info.png cam_sel.png cam_sel_enh.png cam_sel_portadd.png exp.png file.png file_del.png file_del_dia.png file_save.png file_save_dia.png fol.png fol_create.png fol_uploadfile.png gtkam.png help.png help_about.png help_debug.png rt_click_dir.png rt_click_dir_man.png rt_click_list.png rt_click_list_info.png rt_click_list_rename.png sel.png view.png

screenshotsgtkam_DATA = $(EXTRA_DIST)
